--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -643,7 +643,7 @@ width: 105px;
 margin-top:5px;
 }
 
-.comment .username.buddy {
+.comment .username.buddy, .mycomment .username {
 font-weight: 700 !important;
 background-color: #EDF5E1;
 }
