--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -609,6 +609,18 @@ border-bottom: 0px;
 margin-top: 30px;
 }
 
+.comment.later-comment {
+	margin-top:-2px;
+}
+
+.comment.later-comment .comment-container {
+	text-align:center;
+	font-size:9px;
+	padding:2px;
+	color:#000;
+	background:#EEE;
+}
+
 .comment.enemy .comment-container {
 display: none;
 }
