flickr and lastfm

--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -902,6 +902,21 @@ div.tquote div.tqname {
     font-weight: bold;
 }
 /*------- profile information -------- */
+.photostream {
+	float: left;
+	width:85px;
+	border:1px solid #eee;
+	background-color:#fafafa;
+	text-align:center;
+	overflow:hidden;
+	margin-right:10px;
+}
+#flickr_badge_uber_wrapper {
+	text-align:center;
+	width:67px;
+	margin-left:4px;
+}
+
 .personal_info_box {
 	width: 220px;
 	float: left;
@@ -987,6 +1002,22 @@ h3.recent-thread-title {
 	line-height: 18px;
 	padding: 8px;
 	width: 200px;
+}
+
+.lastfm_listing {
+	border-bottom: solid 1px #DDDDDD;
+	padding:4px 0;
+	line-height: normal;
+}
+.lastfm_artist {
+	font-size:11px;
+}
+.lastfm_title {
+	font-size:11px;
+}
+.lastfm_date {
+	font-size:9px;
+	color:#aaaaaa;
 }
 
 #pm-box-controls {
