--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -326,6 +326,7 @@ form .textarea {
 #thread-control, #threads h3, .welcome h4, .welcome > a,
 .welcome ul li:first-child, .paging-text, #threads, #new-thread p:first-child,
 #post-shortcuts, #pinkies, #reply-rc p, #this-is-you, #information, #stats h3,
-#information-bio, #information-desc, #information-widget, #latest-posts, #show_mobile {
+#information-bio, #information-desc, #information-widget, #photostream,
+#latest-posts, #latest-posts-withflickr, #show_mobile {
     display:none;
 }
