users can now be buddied/enemied in a myriad of ways

--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -1209,8 +1209,12 @@ width: 100px;
 float: left;
 }
 
-.remove-acq {
+.remove-acq, .toggle-acq {
 font-size: 9px;
+}
+
+.toggle-acq {
+padding-left: 5px;
 }
 
 #command-pick-one {
