--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -1855,3 +1855,13 @@ padding: 10px 10px 5px 10px;
 #deck-title, #deck-title a {
 font-size: 10px;
 }
+
+#hidden-ads {
+background: #FAFAFA;
+text-align: center;
+padding: 10px;
+margin-bottom: 15px;
+}
+#hidden-ads img {
+margin-right: 5px;
+}
