--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -1538,7 +1538,7 @@ color: #494949;
 #header { width: auto; margin-bottom: 0px; }
 #logout_btn { padding: auto; border: auto; }
 .comment { clear: both; }
-#main-title { overflow: auto; height: auto; }
+#main-title { overflow: auto; height: auto; margin-bottom: 0px; }
 .two { display:none; float:none; }
 .thread .three { clear: left; width: auto; }
 .three .username, .three .time { float:none; display: inline; line-height: 16px; }
