new winter 2011 logo

--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -71,8 +71,8 @@ code {
     display:block;
     text-indent:-9999px;
     width:80px;
-    height:14px;
-    background:url(../img/logo.gif);
+    height:20px;
+    background:url(/img/logos/winter-11.gif);
     margin-bottom:15px;
 }
 
