Add background color for youtube embed

--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -1492,6 +1492,7 @@ color: #494949;
 .youtube_wrapper {
     position:relative;
     cursor: pointer;
+    background: black;
 }
 
 .youtube_placeholder {
