Added santa pinkie to mobile

--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -1767,7 +1767,7 @@ a {
 }
 
 #header {
-    background:#EDF5E1 url(/img/logo.gif) no-repeat 10px center;
+    background:#EDF5E1 url(/img/logos/winter-11.gif) no-repeat 10px center;
     text-indent: -9999px;
     display:block;
     padding:10px;
