--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -1519,6 +1519,7 @@ color: #494949;
     padding: 5px;
     width: 100%;
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
     z-index: 999;
 }
 
@@ -1937,6 +1938,7 @@ line-height: 20px;
 
 #search-phrase {
     width: 100%;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin-bottom: 5px;
 }
