--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -718,6 +718,18 @@ color: #FFFFFF;
 background: #ED135A;
 }
 
+.comment .censor {
+color: #444444;
+font-size: 10px;
+background: #F4F4F4;
+text-align: center;
+padding: 2px;
+}
+
+.comment .censor .content {
+padding: 2px;
+}
+
 .comment .content-block, .test-comment .content-block {
 margin: 5px 0 0 125px;
 font-size: 14px;
