--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -72,7 +72,7 @@ code {
     text-indent:-9999px;
     width:87px;
     height:23px;
-    background:url(/img/logos/mayan-12.gif);
+    background:url(/img/logos/n8.gif);
     margin-bottom:15px;
 }
 
