Click-to-spoil is now Click-to-unspoil
Also changed the warning message so it does not change.

--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -1386,6 +1386,9 @@ spoiler {
 .spoiler-content {
     visibility:hidden;
 }
+.spoiled {
+    visibility:visible;
+}
 
 #preferences .error {
     float:none;
